
  * Log file now contains version information for most actions (Closes: #222585)

    Previously it only contained version information for upgrades and
    downgrades, both current (old) and candidate (new) versions.  Now most
    actions show version information, either the candidate version
    (e.g. install, auto install) or current version (remove, hold, ...).

- Bug fixes:

  * Disable strings gathered for translation (Closes: #790568)

  * Change to try to make updated status stats more clear (Closes: #458351)

  * [cmdline] Correctly print when a package should be purged (Closes: #798286)

  * [curses] With the option of mini-buffer prompts enabled, cancellation of the
    "Quit confirmation" with 'Escape' or 'Ctrl-g' does not cause the
    dialog/prompt to stop working (Closes: #607118)

  * [cmdline] Warn when package cannot be marked/unmarked auto (Closes: #498240)

  * Install signal handlers and do clean-up when terminating abruptly
    (Closes: #558352)

  * [curses] Set better ordering for groups of Preview Actions (Closes: #434352)

- User visible changes:

  * Change error string of source_policy_parser to be the same as the rest

  * [curses] Improve titles and descriptions of views

- Internal changes:

  * Improve retrieval of source package information with (upcoming) APT 1.1.

    Thanks to David Kalnischkies for the suggestion and implementation advice.

    Information about source package and version will be in the binary cache,
    and available via the VerIterator (ver.SourcePkgName() and
    ver.SourceVerStr()); and it is much faster than parsing the package record.

    Additionally, retrieving the source package name in that way defaults to the
    binary package name if no Source record is explicit, so there is no need to
    check if it's empty.

    It is not used in many places in the aptitude code (about 6 files and 10
    different functions/places), but this speeds-up and simplifies the code
    considerably where it was used.
